Fix: example file was missing some markup

--- a/example/syncnarr/sample.html
+++ b/example/syncnarr/sample.html
@@ -8,7 +8,7 @@
 
 <body>
     <main>
-        <h1>CINDERELLA, OR THE LITTLE GLASS SLIPPER</h1>
+        <h1 class="syncnarr">CINDERELLA, OR THE LITTLE GLASS SLIPPER</h1>
         <p><span class="syncnarr">
                 Once there was a gentleman who married, for his second wife, the proudest and most haughty woman that
                 was
@@ -142,7 +142,7 @@
                 jolly
                 coachman, who had the smartest whiskers eyes ever beheld. After that, she said to her:
             </span></p>
-        <p> class="syncnarr"“Go again into the garden, and you will find six lizards behind the watering-pot, bring them to
+        <p class="syncnarr">“Go again into the garden, and you will find six lizards behind the watering-pot, bring them to
             me.”</p>
         <p><span class="syncnarr">
                 She had no sooner done so but her godmother turned them into six footmen, who skipped up immediately
